# src/routes.ts
@@ -5,4 +5,5 @@ export const bindRoutes = (app: Express) => {
   app.post('/join', restHandlers.joinHandler);
   app.post('/check', restHandlers.checkHandler);
   app.get('/viewport', restHandlers.viewportHandler);
+  app.get('/leaderboard', restHandlers.leaderboardHandler);
 };
